# src/api/swagger/swagger.yml
@@ -96,18 +96,13 @@ paths:
       operationId: BooksController.获取图书列表
       parameters:
       - in: formData
-        name: start
-        description: 获取起始位置
-        type: integer
-        format: int64
-      - in: formData
         name: length
-        description: 获取分页步长
+        description: 分页步长
         type: integer
         format: int64
       - in: formData
         name: draw
-        description: 获取请求次数
+        description: 请求页数
         type: integer
         format: int64
       - in: formData
@@ -292,7 +287,7 @@ paths:
       parameters:
       - in: formData
         name: length
-        description: 获取分页步长
+        description: 分页步长
         type: string
       - in: formData
         name: draw
